--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(Output,character)
 S3method(Output,data.frame)
 S3method(Output,default)
+S3method(Output,gtsummary)
 S3method(Output,list)
 S3method(Output_kable,default)
 S3method(Output_kable,list)
