--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: stp25output2
 Type: Package
 Title: Output
-Version: 0.1.4
+Version: 0.2.0
 Author: Wolfgang Peter
 Maintainer: Wolfgang Peter <w.peter@statistik-peter.at>
 Description: Reports erstellen die Tabellen und Texte werden dabei als HTML ausgegeben.
@@ -9,13 +9,14 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
-Date: 2022-09-16
+Date: 2023-07-22
 Imports: plyr,
           htmlTable,
           kableExtra,
           knitr,
           stringr,
-          flextable
+          flextable,
+          stp25settings
 Suggests: 
     magrittr,
     rmarkdown,
