--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(Output,data.frame)
 S3method(Output,default)
 S3method(Output,gtsummary)
 S3method(Output,list)
+S3method(Output,sjTable)
 S3method(Output_kable,default)
 S3method(Output_kable,list)
 S3method(Text,character)
@@ -36,6 +37,7 @@ export(Zitat)
 export(citation_library)
 export(get_opt)
 export(pagebreak)
+export(report_data)
 export(set_opt)
 export(which_output)
 importFrom(flextable,merge_h)
