--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 S3method(Output,character)
 S3method(Output,data.frame)
 S3method(Output,default)
+S3method(Output,gt_tbl)
 S3method(Output,gtsummary)
+S3method(Output,html)
 S3method(Output,list)
 S3method(Output,sjTable)
 S3method(Output_kable,default)
@@ -36,6 +38,7 @@ export(Text)
 export(Zitat)
 export(citation_library)
 export(get_opt)
+export(gt_split_header)
 export(pagebreak)
 export(report_data)
 export(set_opt)
@@ -45,6 +48,21 @@ importFrom(flextable,merge_v)
 importFrom(flextable,regulartable)
 importFrom(flextable,set_header_df)
 importFrom(flextable,theme_vanilla)
+importFrom(grDevices,bmp)
+importFrom(grDevices,cairo_ps)
+importFrom(grDevices,dev.copy2eps)
+importFrom(grDevices,dev.copy2pdf)
+importFrom(grDevices,dev.print)
+importFrom(grDevices,dev.size)
+importFrom(grDevices,jpeg)
+importFrom(grDevices,png)
+importFrom(grDevices,tiff)
+importFrom(gt,cols_label)
+importFrom(gt,extract_body)
+importFrom(gt,sub_missing)
+importFrom(gt,tab_caption)
+importFrom(gt,tab_footnote)
+importFrom(gt,tab_spanner)
 importFrom(kableExtra,add_header_above)
 importFrom(kableExtra,kable_styling)
 importFrom(knitr,kable)
@@ -52,3 +70,7 @@ importFrom(stp25settings,get_opt)
 importFrom(stp25settings,set_opt)
 importFrom(stp25settings,which_output)
 importFrom(stringr,str_split)
+importFrom(tidyselect,starts_with)
+importFrom(utils,browseURL)
+importFrom(utils,citation)
+importFrom(utils,read.table)
