--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(Output,gt_tbl)
 S3method(Output,gtsummary)
 S3method(Output,html)
 S3method(Output,list)
+S3method(Output,parameters_model)
 S3method(Output,sjTable)
 S3method(Output_kable,default)
 S3method(Output_kable,list)
@@ -63,6 +64,7 @@ importFrom(gt,sub_missing)
 importFrom(gt,tab_caption)
 importFrom(gt,tab_footnote)
 importFrom(gt,tab_spanner)
+importFrom(insight,display)
 importFrom(kableExtra,add_header_above)
 importFrom(kableExtra,kable_styling)
 importFrom(knitr,kable)
