End2() mit der Option vom Speichern als docx

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(Abb_Index)
 export(Anmerkung)
 export(Arbeitszeit)
 export(End)
+export(End2)
+export(HTML_IMG)
 export(Head)
 export(Head1)
 export(Head2)
@@ -31,6 +33,7 @@ export(Output2)
 export(Output_kable)
 export(Output_word)
 export(Projekt)
+export(SaveGTplot)
 export(SavePlot)
 export(Stop)
 export(Tab)
