Neue Funktion Sonstige()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(Output_word)
 export(Projekt)
 export(SaveGTplot)
 export(SavePlot)
+export(Sonstige)
 export(Stop)
 export(Tab)
 export(Tab_Index)
