--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(Kunde)
 export(Output)
 export(Output2)
 export(Output_kable)
+export(Output_split)
 export(Output_word)
 export(Projekt)
 export(SaveGTplot)
@@ -42,12 +43,12 @@ export(Tab_Index)
 export(Text)
 export(Zitat)
 export(citation_library)
-export(get_opt)
 export(gt_split_header)
 export(pagebreak)
 export(report_data)
-export(set_opt)
-export(which_output)
+importFrom(dplyr,across)
+importFrom(dplyr,mutate)
+importFrom(dplyr,where)
 importFrom(flextable,merge_h)
 importFrom(flextable,merge_v)
 importFrom(flextable,regulartable)
@@ -72,10 +73,10 @@ importFrom(insight,display)
 importFrom(kableExtra,add_header_above)
 importFrom(kableExtra,kable_styling)
 importFrom(knitr,kable)
-importFrom(stp25settings,get_opt)
-importFrom(stp25settings,set_opt)
-importFrom(stp25settings,which_output)
+importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
+importFrom(stringr,str_trim)
+importFrom(tidyr,replace_na)
 importFrom(tidyselect,starts_with)
 importFrom(utils,browseURL)
 importFrom(utils,citation)
